fix hover on mobile

--- a/src/components/ProductCard/index.scss
+++ b/src/components/ProductCard/index.scss
@@ -34,9 +34,11 @@
 		opacity: 1;
 	}
 
-	&:hover {
-		transform: scale(1.02);
-		animation: bg-moving 20s linear infinite;
+	@media (hover: hover) and (pointer: fine) {
+		&:hover {
+			transform: scale(1.02);
+			animation: bg-moving 20s linear infinite;
+		}
 	}
 
 	&:active {
@@ -59,7 +61,7 @@
 		background-size: 60%;
 		z-index: 2;
 		backdrop-filter: blur(3px);
-		box-shadow: inset 0px 0px 30px -3px rgba(0,0,0,0.75);
+		box-shadow: inset 0px 0px 30px -3px rgba(0, 0, 0, 0.75);
 
 		p {
 			font-size: max(1rem, 1.5vw);
